Optimizations for measuring arrays and Strings